# HSEArchitecture

./: .gitignore
1/: CMakeLists.txt  main.c
1/container/: container.c  container.h
1/generator/: generator.c  generator.h
1/matrix/: matrix.h
1/reader/: reader.c
1/testResults/: output4.txt
1/tests/: test2.txt  test4.txt
2/: CMakeLists.txt  main.cpp
2/container/: Container.cpp  Container.h
2/generator/: Matrix2DGenerator.cpp  Matrix2DGenerator.h  MatrixDiagonalGenerator.cpp  MatrixDiagonalGenerator.h  MatrixGenerator.h  MatrixLowTriangleGenerator.cpp  MatrixLowTriangleGenerator.h
2/matrix/: Matrix.h  Matrix2D.cpp  Matrix2D.h  MatrixDiagonal.cpp  MatrixDiagonal.h  MatrixLowTriangle.cpp  MatrixLowTriangle.h
2/printer/: Printer.cpp  Printer.h
2/reader/: FileReader.cpp  FileReader.h  Matrix2DReader.cpp  Matrix2DReader.h  MatrixDiagonalReader.cpp  MatrixDiagonalReader.h  MatrixLowTriangleReader.cpp  MatrixLowTriangleReader.h  MatrixReader.h
2/tests/: test1.txt
2/testsResults/: output1.txt  output2.txt  output3.txt  output4.txt  output6.txt
3/: main.py
3/container/: Container.py  __init__.py
3/generator/: Matrix2DGenerator.py  MatrixDiagonalGenerator.py  MatrixGenerator.py  MatrixLowTriangleGenerator.py  __init__.py
3/matrix/: Matrix.py  Matrix2D.py  MatrixDiagonal.py  MatrixLowTriangle.py  __init__.py
3/printer/: Printer.py  __init__.py
3/tests/: test2.txt  (+2 more)
4/: CMakeLists.txt  main.c
4/container/: container.asm  container.c  container.h  test.asm
4/generator/: generator.c
4/matrix/: matrix.c  matrix.h
4/reader/: reader.c  reader.h
4/testResults/: output1.txt  output2.txt  output3.txt  output4.txt  output6.txt
4/tests/: test1.txt  test3.txt
5/: Buyer.cpp  Buyer.h  CMakeLists.txt  Department.cpp  Department.h  Product.h  Seller.cpp  Seller.h  ThreadSafeQueue.h  main.cpp
(+10 files in other folders)
